# periodica

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
rust/periodica_core/: Cargo.toml
rust/periodica_core/src/: alloy.rs  data_loader.rs  export.rs  fourier_bake.rs  get.rs  lib.rs  protein.rs  pyfacade.rs  sample.rs
rust/periodica_core/src/predictors/: chou_fasman.rs  constituent.rs  miedema.rs  mod.rs  semf.rs  slater.rs  vsepr.rs
src/periodica/: __init__.py  __main__.py  _dispatch.py  _launcher.py  constants.py  export.py  folding.py  generators.py  get.py  optimize.py  sample.py
src/periodica/core/: __init__.py  alloy_enums.py  amino_acid_enums.py  biomaterial_enums.py  cell_component_enums.py  cell_enums.py  material_enums.py  molecule_enums.py  nucleic_acid_enums.py  protein_enums.py  pt_enums.py  quark_enums.py  subatomic_enums.py
src/periodica/data/: __init__.py  alloy_loader.py  data_manager.py  element_data.py  element_loader.py  layout_config_loader.py  material_data.py  molecule_loader.py  quark_loader.py  quark_source.py  subatomic_loader.py  validation.py
src/periodica/data/active/alloys/: Al-Cu_Alloy_2xxx.json  Al-Li_Alloy_8xxx.json  Al-Mg-Si_Alloy_6xxx.json  Al-Mg_Alloy_5xxx.json  Al-Mn_Alloy_3xxx.json  Al-Si_Alloy_4xxx.json  Al-Zn-Mg-Cu_High_Strength.json  Al-Zn_Alloy_7xxx.json  Alpha_Brass.json  Aluminum_Bronze.json  Beryllium_Copper.json  Bronze_C93200.json  CarbonSteel.json  Chromium_Steel.json  Cr-Mo_Steel.json  Cr-Ni_Steel.json  Cupronickel_70_30.json  Cupronickel_C71500.json  Duplex_Stainless.json  Duralumin_2024.json  Fe-Ag-Al_Ternary.json  Fe-Ag-Au_Ternary.json  Fe-Ag-Be_Ternary.json  Fe-Ag-Bi_Ternary.json  Fe-Ag-Cd_Ternary.json  Fe-Ag-Co_Ternary.json  Fe-Ag-Cr_Ternary.json  Fe-Ag-Cu_Ternary.json  Fe-Ag-Ga_Ternary.json  Fe-Ag-Hf_Ternary.json  Fe-Ag_90_10.json  Fe-Al_90_10.json  Fe-Au_90_10.json  Fe-Be_90_10.json  Fe-Bi_90_10.json  Fe-Cd_90_10.json  Fe-Co_90_10.json  Fe-Cr_90_10.json  Fe-Cu_90_10.json  Fe-Ga_90_10.json  (+16 more)
src/periodica/data/active/amino_acids/: Alanine.json  Arginine.json  Asparagine.json  AsparticAcid.json  Aspartic_Acid.json  Cysteine.json  GlutamicAcid.json  Glutamic_Acid.json  Glutamine.json  Glycine.json  Histidine.json  Isoleucine.json  Leucine.json  Lysine.json  Methionine.json  Phenylalanine.json  Proline.json  Serine.json  Threonine.json  Tryptophan.json  Tyrosine.json  Valine.json  custom_amino.json  demo_pyrrolysine.json
src/periodica/data/active/antiquarks/: ElectronAntiNeutriono.json  NegitivePion.json  Positron.json
src/periodica/data/active/biological_materials/: Adipose_Tissue_White.json  Articular_Cartilage.json  Blood.json  Brain_Gray_Matter.json  Brain_White_Matter.json  Cardiac_Muscle.json  (+14 more)
src/periodica/data/config/: composition_rules.json  dna_thermodynamics.json  folding_rules.json  protein_instability.json  rna_thermodynamics.json
src/periodica/data/reference/: README.md
src/periodica/layout_math/: __init__.py  alloy_category.py  alloy_composition.py  alloy_lattice.py  alloy_property.py  base.py  element_circular.py  element_linear.py  element_spiral.py  element_table.py  molecule_bond.py  molecule_bond_complexity.py  molecule_density.py  molecule_dipole.py  molecule_geometry.py  molecule_grid.py  molecule_mass.py  molecule_phase_diagram.py  molecule_polarity.py  quark_alternative.py  quark_charge_mass.py  quark_circular.py  quark_fermion_boson.py  quark_force_network.py  quark_linear.py  quark_mass_spiral.py  quark_standard.py  subatomic_baryon_meson.py  subatomic_charge.py  subatomic_decay.py  subatomic_discovery.py  subatomic_eightfold.py  subatomic_lifetime.py  subatomic_mass.py  subatomic_quark_tree.py
src/periodica/scripts/: __init__.py  _runner.py  build_alloys.py  build_ceramics.py  build_composites.py  build_hadrons.py  build_ions.py  build_isotopes.py  build_molecules.py  build_periodic_table.py  build_polymers.py
src/periodica/scripts/inputs/: alloys.json  ceramics.json  composites.json  hadrons.json  ions.json  isotopes.json  molecules.json  periodic_table.json  polymers.json
src/periodica/utils/: __init__.py  alloy_calculator.py  alloy_generator.py  atomic_derivation.py  backend_manager.py  biological_component_factory.py  biological_derivation_chain.py  biological_generator.py  bonding_rules.py  cascade_engine.py  color_math.py  crystalline_math.py  derivation_metadata.py  logger.py  material_generator.py  molecular_geometry.py  molecule_generator.py  nuclear_derivation.py  orbital_clouds.py  phase_diagram.py  physics_calculator.py  physics_calculator_v2.py  position_calculator.py  prediction_engine.py  predictive_physics.py  pure_array.py  pure_math.py  quark_constants.py  regeneration_engine.py  report_logger.py  sdf_core.py  simulation_schema.py  validation_report.py
src/periodica/utils/predictors/: __init__.py  base.py  chain.py  compat.py  protocols.py  registry.py
src/periodica/utils/transforms/: __init__.py  fourier_field.py  material_sampler.py  optical_properties.py  stochastic_field.py  thermo_pressure.py  wavelet_field.py
tests/: conftest.py  deviation_report.txt  pytest_plugins.py  test_all_118_elements.py  test_alloy_generator.py  test_alloy_microstructure.py  test_alphafold_validation.py  test_atom_calculator_accuracy.py  test_atom_comprehensive.py  test_biological_derivation.py  test_biological_generator.py  test_biological_predictors.py  test_bonding_rules.py  test_cascade_engine.py  test_cli.py  test_config.py  test_data_driven_calculators.py  test_data_loaders.py  test_data_validation.py  test_derivation_chain.py  test_derivation_metadata.py  test_deviation_report.py  test_e2e_derivation_chain.py  test_enhanced_orbital_accuracy.py  test_enums.py  test_export.py  test_folding.py  test_gemini_generator.py  test_get.py  test_hadron_hyperfine.py  test_hybridization.py  test_import_purity.py  test_json_validation.py  test_material_generator.py  test_material_sampler.py  test_material_validation.py  test_materials.py  test_miedema.py  test_molecular_geometry_accuracy.py  test_molecule_calculator.py  (+23 more)
(+697 files in other folders)
