[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "periodica"
version = "2.0.0a0"
description = "Data-driven scientific computation: particle/nuclear/atomic/molecular physics, materials, alloys, polymers, ceramics, composites, proteins. Generic Get()/Save()/sample() composer + 3D microstructure export (STL/OBJ/VTK/SDF/HLSL) + AlphaFold-validated protein folding."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Andrew Watts"}]
keywords = [
    "chemistry", "physics", "periodic-table", "elements", "molecules",
    "alloys", "polymers", "ceramics", "composites", "materials-science",
    "nuclear-physics", "particle-physics", "biochemistry",
    "protein-folding", "alphafold", "microstructure", "voronoi",
    "rmsd", "kabsch", "stl-export", "vtk", "hlsl", "shader-export",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.urls]
Homepage      = "https://github.com/andrewkwatts-maker/periodica"
Repository    = "https://github.com/andrewkwatts-maker/periodica"
Issues        = "https://github.com/andrewkwatts-maker/periodica/issues"
Changelog     = "https://github.com/andrewkwatts-maker/periodica/blob/main/CHANGELOG.md"

[project.scripts]
periodica = "periodica.__main__:main"

[project.optional-dependencies]
# The slim install (`pip install periodica`) needs only numpy. Everything in
# the core API works on slim: Get/Save/Scope, sampling, folding, optimization,
# generators, CLI, exports.
#
# The `full` extra (`pip install periodica[full]`) pulls in ergonomic libraries
# for plotting, downstream scientific work, and AI-assisted helpers. These are
# never imported by periodica itself; they are intended for user code that
# wants to extend periodica without separately discovering compatible versions.
full = [
    "google-generativeai>=0.3.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]
# `simulated` extra enables the `quark_source = "simulated"` path: quark
# datasheets sourced from the G2-manifold-derived metaphysica predictions
# instead of the bundled PDG JSON. Default source remains "experimental"
# and never imports metaphysica.
simulated = [
    "metaphysica>=1.3.1",
]
# `app` extra installs the KivyMD desktop/Android GUI companion.
# After `pip install periodica[app]` run `periodica-app` to launch.
app = [
    "periodica-app>=1.1.0",
]
# `rust` extra enables the maturin-built `periodica._periodica_core` extension
# module. Without this extra, periodica is pure Python (default) and the
# ``_HAS_RUST`` flag in ``__init__.py`` stays False. With it, ``pip install
# periodica[rust]`` triggers the maturin build and the Rust core ships
# alongside the Python package. See ``rust/periodica_core/Cargo.toml`` for the
# crate's own feature flags (``with-arithmos``, ``with-physica``).
rust = ["maturin>=1.7,<2.0"]
test = [
    "pytest>=7.0.0",
    "pytest-html>=4.0.0",
    "pytest-json-report>=1.5.0",
    "twine>=5.0",
    "build>=1.0",
]
docs = ["pdoc>=14.0.0"]

# ── Optional Rust acceleration (maturin) ────────────────────────────────────
# Configuration is loaded only when maturin is the active build backend
# (``pip install periodica[rust]`` or ``maturin develop --features python``).
# The default setuptools build ignores this section. Mirrors metaphysica's
# pattern for a unified ``rust = ["maturin"]`` opt-in across our PyPI libs.
[tool.maturin]
manifest-path = "rust/periodica_core/Cargo.toml"
module-name = "periodica._periodica_core"
features = ["python"]
python-source = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
periodica = [
    "data/active/**/*.json",
    "data/defaults/**/*.json",
    "data/config/**/*.json",
    "data/derived/**/*.json",
    "data/reference/**/*.json",
    "data/reference/**/*.pdb",
    "data/reference/README.md",
    "scripts/inputs/*.json",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "7.0"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "gemini: marks tests that require Gemini API access",
    "benchmark: marks tests used for performance benchmarking",
]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]
