[package]
name = "periodica_core"
version = "2.0.2"
edition = "2021"
description = "Periodica core: data-driven scientific composition, sampling, predictors, alloy and protein engines, shader export, Fourier baking."
license = "MIT"
authors = ["Andrew Keith Watts <AndrewKWatts@gmail.com>"]
repository = "https://github.com/andrewkwatts-maker/periodica"

[lib]
name = "periodica_core"
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["pyo3"]
with-physica = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.16"
dashmap = "5.5"
rayon = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
# Pure-Rust linear algebra — used for Kabsch SVD in protein.rs (no OpenBLAS required).
nalgebra = "0.33"
# Seeded RNG for deterministic alloy composition search.
rand = { version = "0.8", features = ["small_rng"] }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
